--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,6 +1,6 @@
 {
   "current": {
-    "favicon": "shopify:\/\/shop_images\/Frame_2.svg",
+    "favicon": "shopify://shop_images/Frame_2.svg",
     "cart_type": "drawer",
     "show_cart_note": false,
     "show_vendor": true,
