--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -2,6 +2,7 @@
   "current": {
     "favicon": "shopify:\/\/shop_images\/Frame_2.svg",
     "show_cart_note": false,
+    "cart_type": "drawer",
     "content_for_index": [
 
     ]
